# darwin-xtools

./: .gitignore  CMakeLists.txt  README.md
cctools/: CMakeLists.txt  cctools_version.c.in
cctools/ar/: CMakeLists.txt  ar.c
cctools/as/: CMakeLists.txt  arch64_32.h  as.c  as.h  check-as  driver.c  expr.c  input-scrub.c  messages.c  ppc.c  read.c  read.h
cctools/cbtlibs/: CMakeLists.txt
cctools/efitools/: CMakeLists.txt  makerelocs.c  mtoc.c
cctools/include/mach/i386/: _structs.h
cctools/ld/: CMakeLists.txt  cctools_map_fd.c  cctools_map_fd.h  dylibs.h  fvmlibs.h  indirect_sections.h  layout.h  ld.c  ld.h  mod_sections.h  objects.h  pass1.h  pass2.h  sections.h  specs.h  symbols.c  symbols.h
cctools/libstuff/: CMakeLists.txt  ofile.c  writeout.c
cctools/misc/: CMakeLists.txt  check_dylib.c  checksyms.c  cmpdylib.c  codesign_allocate.c  ctf_insert.c  indr.c  install_name_tool.c  libtool.c  lipo.c  nm.c  pagestuff.c  redo_prebinding.c  seg_addr_table.c  seg_hack.c  segedit.c  size.c  strings.c  strip.c
cctools/otool/: CMakeLists.txt  arm64_disasm.c  arm_disasm.c  arm_disasm.h  i386_disasm.c  main.c  ppc_disasm.c  print_bitcode.c  print_objc.c
cmake/: config-ix.cmake
host-includes/uuid/: uuid.h
ld64/: CMakeLists.txt
ld64/ld64.xcodeproj/: project.pbxproj
ld64/src/: CMakeLists.txt  configure.h.in
ld64/src/abstraction/: MachOFileAbstraction.hpp
ld64/src/ld/: CMakeLists.txt  HeaderAndLoadCommands.hpp  InputFiles.cpp  LinkEdit.hpp  LinkEditClassic.hpp  Options.cpp  Options.h  OutputFile.cpp  OutputFile.h  Resolver.cpp  Resolver.h  Snapshot.cpp  Snapshot.h  compile_stubs.h.in  ld.cpp  ld.hpp  ld_vers.c.in
ld64/src/ld/code-sign-blobs/: blob.cpp  memutils.h
ld64/src/ld/parsers/: archive_file.cpp  lto_file.cpp  lto_file.h  macho_dylib_file.cpp  macho_relocatable_file.cpp  macho_relocatable_file.h  textstub_dylib_file.cpp  textstub_dylib_file.hpp
ld64/src/ld/parsers/libunwind/: AddressSpace.hpp  DwarfInstructions.hpp  Registers.hpp
ld64/src/ld/passes/: bitcode_bundle.cpp  bitcode_bundle.h  branch_island.cpp  branch_shim.cpp  compact_unwind.cpp  dtrace_dof.cpp  dylibs.cpp  got.cpp  huge.cpp  objc.cpp  order.cpp  tlvp.cpp
ld64/src/ld/passes/stubs/: stub_ppc_classic.hpp  stubs.cpp
ld64/src/other/: CMakeLists.txt  ObjectDump.cpp  PruneTrie.cpp  dyldinfo.cpp  machochecker.cpp  rebase.cpp  unwinddump.cpp
ld64/unit-tests/: run-all-unit-tests
ld64/unit-tests/include/: common.makefile
ld64/unit-tests/test-cases/alias-basic/: Makefile
ld64/unit-tests/test-cases/alias-objects/: Makefile
ld64/unit-tests/test-cases/auto-arch/: Makefile
ld64/unit-tests/test-cases/blank-stubs/: Makefile
macho-target-includes/: libunwind.h
macho-target-includes/mach-o/arm/: reloc.h
macho-target-includes/mach-o/arm64/: reloc.h
macho-target-includes/mach-o/i386/: swap.h
macho-target-includes/mach-o/ppc/: reloc.h  swap.h
macho-target-includes/mach-o/x86_64/: reloc.h
strlib/: CMakeLists.txt  string.h
tapilite/: CMakeLists.txt  README
tapilite/include/tapi/: Defines.h  LinkerInterfaceFile.h  PackedVersion32.h  Symbol.h  Version.h  tapi.h
tapilite/src/: CMakeLists.txt  LinkerInterfaceFile.cpp  Version.cpp
xar-additions/: CMakeLists.txt  xar-additions.c  xar.h
